# wateringHole

./: ANCHORING_STANDARD.md  ARTIFACT_AND_PACKAGING.md  ATTESTATION_ENCODING_STANDARD.md  BARRACUDA_LEVERAGE_GUIDE.md  BARRACUDA_LEVERAGE_PATTERNS.md  BIOMEOS_LEVERAGE_GUIDE.md  BTSP_PROTOCOL_STANDARD.md  CAPABILITY_BASED_DISCOVERY_STANDARD.md  CAPABILITY_DOMAIN_REGISTRY.md  CAPABILITY_WIRE_STANDARD.md  CELLMEMBRANE_FIELDMOUSE_DEPLOYMENT.md  COMPOSITION_HEALTH_STANDARD.md  COMPOSITION_TICK_MODEL_STANDARD.md  COORDINATION_HANDOFF_STANDARD.md  CORALREEF_LEVERAGE_GUIDE.md  CORALREEF_WPR_FIX_HANDOFF.md  CROSS_SPRING_COORDINATION_STANDARD.md  CROSS_SPRING_DATA_FLOW_STANDARD.md  CROSS_SPRING_SHADER_EVOLUTION.md  DARK_FOREST_GLACIAL_GATE_STANDARD.md  DEPLOYMENT_AND_COMPOSITION.md  DEPLOYMENT_VALIDATION_STANDARD.md  DESKTOP_NUCLEUS_DEPLOYMENT.md  DISTRIBUTED_COVALENT_DEPLOYMENT.md  DOWNSTREAM_EVOLUTION_MAY2026.md  ECOBIN_ARCHITECTURE_STANDARD.md  ECOSYSTEM_COMPLIANCE_MATRIX.md  ECOSYSTEM_EVOLUTION_CYCLE.md  EXTERNAL_VALIDATION_AND_UPSTREAM_STRATEGY.md  EXTERNAL_VALIDATION_ARTIFACT_STANDARD.md  FOUNDATION_INTEGRATION_GUIDE.md  GARDEN_COMPOSITION_ONRAMP.md  GATE_DEPLOYMENT_STANDARD.md  GEN4_BRIDGE.md  GENOMEBIN_ARCHITECTURE_STANDARD.md  GLACIAL_SHIFT_READINESS.md  GLOSSARY.md  GPU_AND_COMPUTE_EVOLUTION.md  GPU_F64_NUMERICAL_STABILITY.md  GPU_FIXED_FUNCTION_SCIENCE_REPURPOSING.md  (+80 more)
fossilRecord/nestgate/tools-archived-mar30-2026/clone-optimizer/: Cargo.toml  README.md
fossilRecord/nestgate/tools-archived-mar30-2026/clone-optimizer/src/: analyzer.rs  config.rs  engine.rs  error.rs  (+7 more)
(+3324 files in other folders)
