[[bin]]
name = "clone-optimizer"
path = "src/main.rs"

[workspace]

[package]
name = "clone-optimizer"
version = "0.1.0"
authors = ["NestGate Team", "Evolved from BearDog foundations"]
description = "Advanced clone optimization and zero-copy migration tool for Rust codebases"
edition = "2024"
license = "AGPL-3.0-only"
repository = "https://github.com/ecoprimals/nestgate"
readme = "README.md"
keywords = ["optimization", "zero-copy", "performance", "rust", "tooling"]
categories = ["development-tools", "rust-patterns", "performance-tools"]

[lib]
name = "clone_optimizer"
path = "src/lib.rs"

[dependencies]
regex = "1.0"
tracing = "0.1"
uuid = "1.0"
serde_json = "1.0"
thiserror = "1.0"
walkdir = "2.0"
anyhow = "1.0"
syn = { version = "2.0", features = ["full", "parsing", "printing", "visit"] }
quote = "1.0"
proc-macro2 = "1.0"
toml = "0.8"

[dev-dependencies]
tempfile = "3.0"
criterion = "0.5"

[dependencies.tokio]
version = "1.0"
features = ["full"]

[dependencies.tracing-subscriber]
version = "0.3"
features = ["env-filter"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.clap]
version = "4.0"
features = ["derive"]

[dependencies.rayon]
version = "1.0"
features = [] 